# GRN_Agent

./: .gitignore  README.md  pyproject.toml
conf/: blind_tf_eager_datacontext_eval.yml  blind_tf_eager_datacontext_eval_neg1.yml  blind_tf_eager_datacontext_eval_neg2.yml  blind_tf_eager_datacontext_eval_neg2_exhaustive.yml  mESC_tf500_tf_eager_integrated.yml  mESC_tf500_tf_eager_train.yml  split.resolved.yml  tf_eager_integrated_standard.yml
data/: beeline_atac_availability.csv  gene_alias_cache.json  manifest.json
docs/: MULTIMODAL_DATA_ACQUISITION.md  TF-EAGER.md  TF_EAGER_CONFIG_TUTORIAL.md  algorithms.tex  table_top25_novel_edges.tex
scripts/: acquire_multimodal_data.py  analyze_fair_benchmark_heatmaps.py  benchmark_fair_blind_vs_baselines.py  build_lit_figure.py  build_tf_eager_windows.py  build_training_pairs.py  collect_tf_eager_eval_tables.py  compare_tf_eager_neg_models.py  eval_grn_agent.py  from pptx import Presentation.py  generate_beeline_atac_table.py  infer_tf_eager.py  make_tf_holdout_split_manifest.py  manage_genome_db.py  plot_eval_pr_curve.py  plot_tf_eager_ablation_heatmap.py  plot_tf_eager_eval_metrics.py  run_blind_tf_eager_datacontext_eval.py  run_full_workflow.py  run_integrated_eager_workflow.py  run_integrated_tf_eager_workflow.py  run_literature_validation.py  run_multicontext_tf_eager_workflow.py  summarize_tf_eager_ablation.py  train_candidate_reranker.py  train_eager.py  train_tf_eager.py
tests/: conftest.py  test_acquisition.py  test_eager_model.py  test_gold_edges.py  test_integrated_tf_eager_workflow.py  test_metrics_extended.py  (+13 more)
(+822 files in other folders)
