[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grn-agent"
version = "0.1.0"
description = "GRNAgent: evidence-graph gene regulatory network inference"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "GPLv3" }
dependencies = [
  "pydantic>=2.5",
  "PyYAML>=6.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.11",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
scanpy = ["scanpy>=1.9", "anndata>=0.10"]
torch = ["torch>=2.0", "torchvision", "torchaudio", "torchmetrics>=1.4", "wandb>=0.17"]
llm = [
  "transformers>=4.38",
  "peft>=0.8",
  "accelerate>=0.27",
  "bitsandbytes>=0.42",
  "datasets>=2.16",
  "trl>=0.9",
]
acquisition = [
  "pybedtools>=0.9.0",
  "pyBigWig>=0.3.18",
  "biopython>=1.81",
  "requests>=2.31.0",
]
literature = [
  "spacy>=3.0",
  "python-dotenv>=1.0",
  "matplotlib>=3.7",
  "requests>=2.31.0",
  "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
]
dev = ["pytest>=7.4", "ruff>=0.1"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
